--- a/back_server/.vscode/settings.json
+++ b/back_server/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "venv\\Scripts\\python.exe",
+    "python.pythonPath": "venv/bin/python",
     "git.ignoreLimitWarning": true,
     "python.formatting.provider": "autopep8"
 }
